--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<img src="./images/bg-pattern-card.svg" alt="">
 			<div class="content">
 				<img src="./images/image-victor.jpg" alt="">
-				<h2>Victor Crest <span>26</span></h2>
+				<h1>Victor Crest <span>26</span></h1>
 				<p>London</p>
 				<div class="footer">
 					<div>
@@ -32,7 +32,7 @@
 					</div>
 					<div>
 						<p class="num">1.4K</p>
-						<p>Followers</p>
+						<p>Photos</p>
 					</div>
 				</div>
 			</div>
